# learn-opengl

./: .gitignore  CMakeLists.txt
cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
resources/objects/backpack/: backpack.mtl
src/core/: camera.h  mesh.h  model.h
src/demos/hello_world/: color.fs  color.vs  main.cpp
src/demos/mesh_edit/: frag.fs  main.cpp
src/demos/rasterizer/: main.cpp
src/hello_world/: main.cpp
src/rasterizer/: main.cpp
src/render/: rasterizer.cpp  rasterizer.h
